2009-12-03  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Eric Seidel.

        AX: VO just says "term" on many web sites
        https://bugs.webkit.org/show_bug.cgi?id=32139

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (getRoleDescriptionCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::roleDescription):
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::roleDescription):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::roleDescription):

2009-12-03  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Implement WAI-ARIA scrollbar role and related property aria-orientation
        https://bugs.webkit.org/show_bug.cgi?id=32126

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (getOrientationCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::orientation):
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::orientation):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::orientation):

2009-12-03  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adam Roben.

        Minor correction to r51663.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (addQTDirToPATH):
            GetEnvironmentVariable -> GetEnvironmentVariableW.

2009-12-03  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Adam Roben.

        ~96 regression tests fail when using QuickTime 7.6 (they pass with QuickTime 7.3)
        https://bugs.webkit.org/show_bug.cgi?id=30256
